fix(#105): use margin insteas of gap property

--- a/src/components/LanguageList/LanguageList.module.scss
+++ b/src/components/LanguageList/LanguageList.module.scss
@@ -18,7 +18,8 @@
 .wrapper {
   display: flex;
   flex-flow: row wrap;
-  gap: 15px;
+  margin-bottom: -15px;
+  margin-left: -15px;
 }
 
 .search {
@@ -30,6 +31,8 @@
   height: 42px;
   flex-grow: 1;
   padding: 10px 0;
+  margin-bottom: 15px;
+  margin-left: 15px;
 }
 
 .langWrap {
