--- a/src/components/LevelList/LevelList.module.scss
+++ b/src/components/LevelList/LevelList.module.scss
@@ -11,9 +11,10 @@
 .wrapper {
   display: flex;
   flex-flow: column nowrap;
-  gap: 16px;
+  margin-bottom: -16px;
 }
 
 .item {
   height: 42px;
+  margin-bottom: 16px;
 }
