--- a/src/components/Time/Time.module.scss
+++ b/src/components/Time/Time.module.scss
@@ -15,11 +15,14 @@
   display: flex;
   flex-flow: row wrap;
   align-content: flex-start;
-  gap: 16px;
+  margin-bottom: -16px;
+  margin-left: -16px;
   overflow-y: auto;
 }
 
 .itemContainer {
   height: 40px;
   flex-basis: 72px;
+  margin-bottom: 16px;
+  margin-left: 16px;
 }
