--- a/src/screens/main/MainScreen/MainScreen.module.scss
+++ b/src/screens/main/MainScreen/MainScreen.module.scss
@@ -25,7 +25,11 @@
   min-height: 40px;
   flex-wrap: nowrap;
   margin-bottom: 24px;
-  gap: 7px;
+  margin-left: -14px;
+
+  & button {
+    margin-left: 7px;
+  }
 }
 
 .account {
